# src/modules/auth/auth.controllers.ts
@@ -422,7 +422,18 @@ const getUser = async (req: Request, res: Response) => {
 			.json({ message: 'Пользователь не прошел проверку подлинности' });
 	}
 
-	res.status(200).send({ profile: data });
+	const userData = {
+		id: data.id,
+		userName: data.userName,
+		role: data.role,
+		email: data.email,
+		isActive: data.isActive,
+		photo: data.photo,
+		createdAt: data.createdAt,
+		updatedAt: data.updatedAt
+	};
+
+	res.status(200).send({ profile: userData });
 };
 
 const authenticateToken = (req: Request, res: Response, next: NextFunction) => {
