# src/swagger.json
@@ -381,10 +381,16 @@
                         "id": {
                           "type": "string"
                         },
+                        "userName": {
+                          "type": "string"
+                        },
+                        "role": {
+                          "type": "string"
+                        },
                         "email": {
                           "type": "string"
                         },
-                        "userName": {
+                        "isActive": {
                           "type": "string"
                         },
                         "photo": {
